--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "@svgdotjs/svg.js": "^3.0.16",
     "line-intersect": "^3.0.0",
-    "parcel-bundler": "^1.12.4",
+    "semver": "^7.3.4",
     "three": "^0.126.1"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.3.1"
   }
 }
